# prompting

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/ai_toolbox/: __init__.py  api.py
tests/: test_api.py
