[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_toolbox"
version = "0.1.0"
description = "A small Python utility library for AI tooling"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "rayan", email = "rayan@rayan.com"}]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy", "pre-commit"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
